kopiering og generering av master-sertifikater

--- a/playbook.yml
+++ b/playbook.yml
@@ -14,59 +14,93 @@
       path: /etc/kubernetes/pki/kube-apiserver-server.pem
     register: apiserver
 
+  - name: Check master for service account key
+    stat: 
+      path: /etc/kubernetes/pki/sa.key
+    register: sa
+
   - fetch: 
       src: /etc/kubernetes/pki/ca.pem
-      dest: pki/
+      dest: target/pki/master/
       flat: yes
     when: ca.stat.exists 
 
   - fetch: 
       src: /etc/kubernetes/pki/ca-key.pem
-      dest: pki/
+      dest: target/pki/master/
       flat: yes
     when: ca.stat.exists 
 
   - fetch: 
       src: /etc/kubernetes/pki/kube-apiserver-server.pem
-      dest: pki/
+      dest: target/pki/master/
       flat: yes
     when: apiserver.stat.exists
   
   - fetch: 
       src: /etc/kubernetes/pki/kube-apiserver-server-key.pem
-      dest: pki/
+      dest: target/pki/master/
       flat: yes
     when: apiserver.stat.exists
+
+  - fetch: 
+      src: /etc/kubernetes/pki/sa.key
+      dest: target/pki/master/
+      flat: yes
+    when: sa.stat.exists
 
 # Generate certificates
 - hosts: localhost
   tasks:
   - name: Ensure PKI directory exists
-    file: state=directory path=pki/
+    file: state=directory path=target/pki/
+
+  - name: Ensure master directory exists
+    file: state=directory path=target/pki/master
+  
+  - name: Ensure worker directory exists
+    file: state=directory path=target/pki/worker
 
   - name: Generate ca-csr.json
-    template: src=templates/ca-csr.j2 dest=pki/ca-csr.json
+    template: src=templates/ca-csr.j2 dest=target/pki/ca-csr.json
 
   - name: Generate kube-apiserver-csr.json
-    template: src=templates/kube-apiserver-server-csr.j2 dest=pki/kube-apiserver-server-csr.json
+    template: src=templates/kube-apiserver-server-csr.j2 dest=target/pki/kube-apiserver-server-csr.json
   
   - name: Copy ca-config.json
-    copy: src=files/ca-config.json dest=pki/ca-config.json
+    copy: src=files/ca-config.json dest=target/pki/ca-config.json
 
   - name: Initializing the CA
-    shell: bin/cfssl gencert -initca pki/ca-csr.json | bin/cfssljson -bare pki/ca
+    shell: bin/cfssl gencert -initca target/pki/ca-csr.json | bin/cfssljson -bare target/pki/master/ca
     args:
-      creates: pki/ca.pem
+      creates: target/pki/master/ca.pem
 
   - name: Creating kube apiserver certificate
-    shell: bin/cfssl gencert -ca=pki/ca.pem -ca-key=pki/ca-key.pem -config=pki/ca-config.json -profile=server pki/kube-apiserver-server-csr.json | bin/cfssljson -bare pki/kube-apiserver-server
+    shell: bin/cfssl gencert -ca=target/pki/master/ca.pem -ca-key=target/pki/master/ca-key.pem -config=target/pki/ca-config.json -profile=server target/pki/kube-apiserver-server-csr.json | bin/cfssljson -bare target/pki/master/kube-apiserver-server
     args:
-      creates: pki/kube-apiserver-server.pem
+      creates: target/pki/master/kube-apiserver-server.pem
 
   - name: Creating apiserver kubelet client certificates
-    shell: bin/cfssl gencert -ca=pki/ca.pem -ca-key=pki/ca-key.pem -config=pki/ca-config.json -profile=server files/kube-apiserver-kubelet-client-csr.json | bin/cfssljson -bare pki/kube-apiserver-kubelet-client
+    shell: bin/cfssl gencert -ca=target/pki/master/ca.pem -ca-key=target/pki/master/ca-key.pem -config=target/pki/ca-config.json -profile=server files/kube-apiserver-kubelet-client-csr.json | bin/cfssljson -bare target/pki/master/kube-apiserver-kubelet-client
     args:
-      creates: pki/kube-apiserver-kubelet-client-server.pem
+      creates: target/pki/master/kube-apiserver-kubelet-client.pem
+
+  - name: Creating service account keypair 
+    shell: /usr/bin/openssl genpkey -algorithm RSA -out target/pki/master/sa.key -pkeyopt rsa_keygen_bits:2048 && /usr/bin/openssl rsa -pubout -in target/pki/master/sa.key -out target/pki/master/sa.pub
+    args:
+      creates: target/pki/master/sa.key
+
+# Copy certificates to master
+- hosts: masters
+  user: deployer
+  become: yes
+  tasks:
+
+  - name: Ensure PKI directory exists on master
+    file: state=directory path=/etc/kubernetes/pki
+
+  - name: Copy certificates
+    copy: src=target/pki/master/ dest=/etc/kubernetes/pki/
 
 # Common initialization play
 - hosts: all
