started work on kubelet, added docker repo

--- a/roles/generate_master_certificates/tasks/main.yml
+++ b/roles/generate_master_certificates/tasks/main.yml
@@ -35,3 +35,4 @@
   shell: /usr/bin/openssl genpkey -algorithm RSA -out target/pki/master/sa.key -pkeyopt rsa_keygen_bits:2048 && /usr/bin/openssl rsa -pubout -in target/pki/master/sa.key -out target/pki/master/sa.pub
   args:
     creates: target/pki/master/sa.key
+    creates: target/pki/master/sa.pub
