--- a/roles/initialization/tasks/main.yml
+++ b/roles/initialization/tasks/main.yml
@@ -11,7 +11,6 @@
     gpgcheck: true
     state: present
 
-
 - name: Add docker repository
   become: yes
   yum_repository:
@@ -38,6 +37,6 @@
   environment: "{{ proxy_env }}"
   yum: name={{ item }} state=latest
   with_items:
-    - docker
+    - docker-ce
     - kubelet
     - kubernetes-cni
