--- a/roles/fetch_existing_certificates/tasks/main.yml
+++ b/roles/fetch_existing_certificates/tasks/main.yml
@@ -20,43 +20,42 @@
 
 - fetch:
     src: /etc/kubernetes/pki/ca.pem
-    dest: target/pki/master/
+    dest: target/pki/
     flat: yes
   when: ca.stat.exists
 
 - fetch:
     src: /etc/kubernetes/pki/ca-key.pem
-    dest: target/pki/master/
+    dest: target/pki/
     flat: yes
   when: ca.stat.exists
 
-
 - fetch:
     src: /etc/kubernetes/pki/admin.pem
-    dest: target/pki/master/
+    dest: target/pki/
     flat: yes
   when: admin.stat.exists
 
 - fetch:
     src: /etc/kubernetes/pki/admin-key.pem
-    dest: target/pki/master/
+    dest: target/pki/
     flat: yes
   when: admin.stat.exists
 
 - fetch:
     src: /etc/kubernetes/pki/kube-apiserver-server.pem
-    dest: target/pki/master/
+    dest: target/pki/
     flat: yes
   when: apiserver.stat.exists
 
 - fetch:
     src: /etc/kubernetes/pki/kube-apiserver-server-key.pem
-    dest: target/pki/master/
+    dest: target/pki/
     flat: yes
   when: apiserver.stat.exists
 
 - fetch:
     src: /etc/kubernetes/pki/sa.key
-    dest: target/pki/master/
+    dest: target/pki/
     flat: yes
   when: sa.stat.exists
