--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,3 +1,13 @@
+- name: Ensure certs directory exists
+  file: state=directory path=/etc/pki/ca-trust/source/anchors/
+
+- name: Install proxy cert
+  copy: src=files/webproxy.crt dest=/etc/pki/ca-trust/source/anchors/webproxy.crt
+  notify: update_cert_index
+
+- name: Update certificate CA truststore
+  meta: flush_handlers
+
 - name: Add kubernetes repository
   yum_repository:
     name: Kubernetes
@@ -20,13 +30,6 @@
     gpgkey: https://download.docker.com/linux/centos/gpg
     gpgcheck: true
     state: present
-
-- name: Ensure certs directory exists
-  file: state=directory path=/etc/pki/ca-trust/source/anchors/
-
-- name: Install proxy cert
-  copy: src=files/webproxy.crt dest=/etc/pki/ca-trust/source/anchors/webproxy.crt
-  notify: update_cert_index
 
 - name: Install required packages
   environment: "{{ proxy_env }}"
