--- a/roles/remove_certificates/tasks/main.yml
+++ b/roles/remove_certificates/tasks/main.yml
@@ -1,42 +1,2 @@
-- name: Ensure PKI directory exists
-  file: state=directory path=target/pki/
-
-- name: Ensure master directory exists
-  file: state=directory path=target/pki
-
-- name: Ensure worker directory exists
-  file: state=directory path=target/pki/worker
-
-- name: Generate ca-csr.json
-  template: src=templates/ca-csr.j2 dest=target/pki/ca-csr.json
-
-- name: Generate kube-apiserver-csr.json
-  template: src=templates/kube-apiserver-server-csr.j2 dest=target/pki/kube-apiserver-server-csr.json
-
-- name: Copy ca-config.json
-  copy: src=files/ca-config.json dest=target/pki/ca-config.json
-
-- name: Initializing the CA
-  shell: bin/cfssl gencert -initca target/pki/ca-csr.json | bin/cfssljson -bare target/pki/ca
-  args:
-    creates: target/pki/ca.pem
-
-- name: Creating admin certificate
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client files/admin-csr.json | bin/cfssljson -bare target/pki/admin
-  args:
-    creates: target/pki/admin.pem
-
-- name: Creating kube apiserver certificate
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server target/pki/kube-apiserver-server-csr.json | bin/cfssljson -bare target/pki/kube-apiserver-server
-  args:
-    creates: target/pki/kube-apiserver-server.pem
-
-- name: Creating apiserver kubelet client certificates
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server files/kube-apiserver-kubelet-client-csr.json | bin/cfssljson -bare target/pki/kube-apiserver-kubelet-client
-  args:
-    creates: target/pki/kube-apiserver-kubelet-client.pem
-
-- name: Creating service account keypair
-  shell: /usr/bin/openssl genpkey -algorithm RSA -out target/pki/sa.key -pkeyopt rsa_keygen_bits:2048 && /usr/bin/openssl rsa -pubout -in target/pki/sa.key -out target/pki/sa.pub
-  args:
-    creates: target/pki/sa.pub
+- name: Remove target directory on ansible-master
+  file: state=absent path=target/
