--- a/roles/revert_common/tasks/main.yml
+++ b/roles/revert_common/tasks/main.yml
@@ -12,9 +12,9 @@
 - name: Remove required packages
   yum: name={{ item }} state=absent
   with_items:
-    - "docker-ce-{{ docker_version }}"
-    - "kubernetes-cni-{{ cni_version }}"
-    - "kubelet-{{ k8s_version }}"
+    - "docker-ce"
+    - "kubernetes-cni"
+    - "kubelet"
 
 - name: Remove Docker proxy settings
   file: path=/etc/systemd/system/docker.service.d/proxy.conf state=absent
